k3s/argocd/manifests/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: argocd
spec:
  redirectScheme:
    scheme: https
    permanent: true

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.bricklou.ovh`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
      middlewares:
        - name: redirect-to-https
    - kind: Rule
      match: Host(`argocd.bricklou.ovh`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
      middlewares:
        - name: redirect-to-https
